Add macros to extract information from GEN and limiti.py

--- a/data/statements/cms-contest.cls
+++ b/data/statements/cms-contest.cls
@@ -49,6 +49,8 @@
 \RequirePackage{tabularx}
 \RequirePackage{environ}
 \RequirePackage{fontawesome}
+\RequirePackage{siunitx}
+\RequirePackage{currfile}
 
 
 \pagestyle{fancy}
@@ -398,6 +400,38 @@
 	   \@showlogotrue%
 	   \gdef\this@contestlogo{#1}%
     }
+}
+
+
+% Tools to extract subtask and task limits and scores.
+\newwrite\py@num@tmp
+\newcommand{\pynum}[2][]{%
+\immediate\openout\py@num@tmp=\currfiledir/py_num.py%
+\if\relax\detokenize{#1}\relax
+\else
+\immediate\write\py@num@tmp{from #1 import *}%
+\fi
+\immediate\write\py@num@tmp{print(#2)}%
+\immediate\closeout\py@num@tmp%
+\immediate\write18{cd \currfiledir; python py_num.py > ../py_num.tex}%
+\CatchFileDef{\py@num}{py_num.tex}{}%
+\num\py@num%
+}
+
+\newcommand{\limiti}[1]{%
+\pynum[limiti]{#1}%
+}
+
+\newcommand{\stscore}[1]{%
+\immediate\write18{cd \currfiledir; grep '^\#ST: ' GEN | head -n #1 | tail -n 1 | cut -f 2 -d : | xargs echo -n > ../stscore.tex}%
+\phantom{00}\llap{\input{stscore.tex}\unskip}%
+}
+
+\newcommand{\st}{\the@subtaskcounter}
+
+\newcommand{\subtask}{%
+\addtocounter{@subtaskcounter}{1}%
+\textbf{\makebox[2cm][l]{\kw@Subtask~\the@subtaskcounter}~[\stscore{\the@subtaskcounter} \kw@points]}:
 }
 
 
